--- a/TODO
+++ b/TODO
@@ -7,7 +7,9 @@
         ✔ btn 2 : refuse @done(22-06-11 20:59)
         ✘ creat model(refuse) @cancelled(22-06-11 20:56)
     Home:
-        ☐ fix title
-        ☐ add counter
-        ☐ add status to ticket to count how muche open and closed
+        ✔ fix title @done(22-06-23 21:02)
+        ✔ add counter @done(22-06-23 21:25)
+        ✔ add status to ticket to count how muche open and closed @done(22-06-23 21:25)
         ☐ add action button
+        ☐ add materile table
+        ☐ add materile cnx to form selected element
