adding ticket deleting methode

--- a/TODO
+++ b/TODO
@@ -10,6 +10,6 @@
         ✔ fix title @done(22-06-23 21:02)
         ✔ add counter @done(22-06-23 21:25)
         ✔ add status to ticket to count how muche open and closed @done(22-06-23 21:25)
-        ☐ add action button
+        ✔ add action button @done(22-06-24 14:48)
         ☐ add materile table
         ☐ add materile cnx to form selected element
